# very-secret-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
b2btest/: gunicorn.conf.py  init_local_db.py  manage.py  pytest.ini
b2btest/b2btest/: asgi.py  settings.py  urls.py  wsgi.py
b2btest/wallets/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
b2btest/wallets/migrations/: 0001_initial.py
nginx/: 80.conf
